# raydium-clmm-sdk

client/: Cargo.toml
client/src/: lib.rs
client/src/instructions/: amm_instructions.rs  token_instructions.rs
